--- a/viagem.html
+++ b/viagem.html
@@ -23,5 +23,7 @@
         Alguns itens de higiene
     </ul>
     <a href="https://www.booking.com/index.pt-br.html?aid=2278700&pagename=holidays-portuguese-pt-row&label=msn-4YgHxwkPFw*36UJBhTpd4Q-80333250283408:tikwd-80333410256471:loc-147031:neo:mtp:lp147031:dec:qssite%20oficial%20de%20turismo&utm_campaign=Portuguese%20PT%20ROW&utm_medium=cpc&utm_source=bing&utm_term=4YgHxwkPFw*36UJBhTpd4Q&msclkid=28919d105d6c12a6bffbf5927122d2aa" target="_blank">Site que usei para planejar a viagem</a>
+    
+    <a href="dicas.html" target="_blank">Dicas</a>
 </body>
 </html>
