--- a/trabalho_viagem.html
+++ b/trabalho_viagem.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promoções Imperdíveis!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <h1 id="a"> Para aqueles que sonham um dia ir para alguns países da Ásia e Europa, separei uma lista com as promoções que você não pode perder se quiser viajar para estes lugares!</h1>
