--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SENAC > J.Kelly</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Adivinhe o número secreto!</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <h1>Paragráfos</h1>
-    <p>Para fazer uma quebra de linha
-       <br> não adianta apertar ENTER
-    </p>
-    <p>Eu quero que apareça os símbolos
-        quando for referenciar a
-        tag &ltbr&gt </p>
-        </body>
+    <div class="container">
+        <h1>Adivinhe o número:</h1>
+        <p>Tente adivinhar o número que estou pensando entre 1 e 100</p>
+        <p>Você tem <span id="num">10</span> chances.</p>
 
-        <h2>símbolos</h2>
-        <ul>
-            <li>&reg;</li>
-            <li>&copy;</li>
-            <li>&Delta;</li>
-        </ul>
+        <div class="input-area">
+            <label for="campoPalpite">Digite seu palpite:</label>
+           <input type="number" id="campoPaplite" min="1" max="100">
+           <button id="botaoEnviar">Enviar Palpite</button>
+        </div>
+        <div class="resultado-area">
+            <p class="mensagem"></p>
+            <p class="palpites-anteriores"></p>
+            <p class="dica"></p>
+        </div>
 
-        <h2>Emojis</h2>
-        <ul>
-            <li>&#x1F98B</li>
-        </ul>
+        <button id="botaoReiniciar" class="hidden">Reiniciar Jogo</button>
+    </div>
+    <script src="script.js" defer></script>
+</body>
 </html>
